styles.css
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tipCalc{
    background-color: lightgray;
    padding:20px;
    border: 5px black;
    width: 400px;
}

h1,h2{
    text-align: center;
}

h1{
    font-weight: bolder;
}

label{
    display: block;
    margin-bottom: 10px;
} 

input {
    width: 100%;
    padding: 10px;
    border: 1px black; 
    margin: 0 10px 10px 0;
}

input[type="range"] {
    display: block;
}

input[type="disabled"] {
    background-color: darkgray;
    }

